--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,34 @@
 <resources>
     <string name="app_name">Moon小家</string>
+    <string name="setting">Setting</string>
+    <string name="resume">Resume</string>
+    <string name="cancel">Cancel</string>
+
+    <string name="successfully">Successful</string>
+    <string name="failure">Failure</string>
+
+    <string name="permission_camera">Camera</string>
+    <string name="permission_contact">Contact</string>
+    <string name="permission_location">Location</string>
+
+    <string name="permission_calendar">Calendar</string>
+    <string name="permission_microphone">Microphone</string>
+    <string name="permission_storage">Storage</string>
+
+    <string name="permission_phone">Phone</string>
+    <string name="permission_sensors">Sensors</string>
+    <string name="permission_sms">SMS</string>
+
+    <string name="permission_setting">Permission Setting</string>
+    <string name="permission_install">Install Apk</string>
+
+    <string name="title_dialog">Tips</string>
+    <string name="message_permission_rationale">Grant the following permissions to continue the program:\n\n%1$s</string>
+    <string name="message_permission_always_failed">Please give us permission in the settings:\n\n%1$s</string>
+    <string name="message_setting_comeback">The user comes back from the settings page.</string>
+
+    <string name="message_install_storage_failed">We need to read and write external storage permission.</string>
+    <string name="message_install_always_failed">Your phone is not allowed us to install apps.</string>
+
+    <string name="message_error_storage">Please check the external storage device.</string>
 </resources>
